fix for footer being covered up on phone screens

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,8 +5,8 @@
 .container {
   width: 100%;
   background: var(--color-black);
-  height: 33vh;
   padding-top: var(--space-lg);
+  margin-bottom: var(--space-lg);
   display: flex;
   flex-direction: column;
   align-items: center;
